# sqlite_wrapper

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: database.h  isqlite3.h
src/: database.cpp  sqlite3_wrapper.cpp
tests/: database_tests.cpp
